# speculative-decoding

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
docs/: BENCHMARKING.md
prompts/: smoke.txt
reports/: references.bib
reports/milestone/: report.tex
reports/proposal/: proj_pro.tex
results/raw/: baseline.jsonl  baseline_greedy.json  baseline_smoke.json  spec_fixedk_k4.json  speculative_adaptive_aimd.jsonl  speculative_fixed.jsonl  speculative_greedy_fixed.jsonl
scripts/: baseline.py  benchmark.py  common.py  config.py  download.py  export_runs_csv.py  metrics.py  run_baseline.py  run_draft_sweep.py  run_smoke_suite.py  speculative.py  speculative_fixed_k.py
